session-11-12-kubernetes/ecom-app-k8s-yamls/order-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: ram1uj/ecom-app-order-service
          ports:
            - containerPort: 8200
