session-11-12-kubernetes/ecom-app-k8s-yamls/product-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service

spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
      metadata:
        labels:
          app: product-service
      spec:
        containers:
          - name: product-service
            image: ram1uj/ecom-app-product-service
            ports:
              - containerPort: 8100
