session-11-12-kubernetes/ecom-app-k8s-yamls/order-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
    selector:
        app: order-service
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8200
    type: NodePort
