session-11-12-kubernetes/ecom-app-k8s-yamls/product-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
    selector:
        app: product-service
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8100
    type: NodePort
