session-11-12-kubernetes/ecom-app-k8s-yamls/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
